# DTS_QT

./: README.md
DTS_QT/: CMakeLists.txt  CMakeLists.txt.user.gNkple  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
